# malphite

./: .pre-commit-config.yaml  LICENSE  README.md  init_package.sh  pyproject.toml
.github/workdlows/: gh-page.yml
.github/workflows/: gh-page.yml  pypi.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.md  shared_memory.md
src/malphite/: camera.py  data_server.py
src/python_package_template/: __init__.py
