[project]
name = "python-library-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "changshan", email = "changshanshi@outlook.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pytest",
    "pre-commit",
]

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
